# plaingl

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  2d_rendering.frag  2d_rendering.shader  2d_rendering.vert  CMakeLists.txt  base.frag  base.shader  base.vert  basic.mat  camera_background_shader.frag  gizmo.frag  gizmo.vert  material.mat  object_indexing.frag  portfile.cmake  quad_shader.frag  quad_shader.vert  shader.frag  shader.vert  shader_ball.fbx  simple.shader  sphere.fbx  standard.frag  standard.shader  standard.vert  surface.frag  surface.shader  surface.vert  text.frag  text.mat  text.shader  text.vert  texture.frag  usage  vcpkg.json
src/: CMakeLists.txt  asset_manager.cpp  asset_manager.hpp  base.hpp  camera.cpp  camera.hpp  color.hpp  component.cpp  component.hpp  context_aware_object.hpp  event.hpp  feature_flags.hpp  file.cpp  file.hpp  filesystem.hpp  font.cpp  font.hpp  forward.hpp  framebuffer.cpp  framebuffer.hpp  game_clock.cpp  game_clock.hpp  game_object.cpp  game_object.hpp  gizmo_drawer.cpp  gizmo_drawer.hpp  gizmo_object.cpp  gizmo_object.hpp  gl_error_handler.cpp  gl_error_handler.hpp  gl_window.cpp  gl_window.hpp  graphics_buffer.cpp  graphics_buffer.hpp  image.cpp  image.hpp  input_system.cpp  input_system.hpp  light.cpp  light.hpp  (+38 more)
src/application/: CMakeLists.txt  application.cpp  application.hpp  application_commands.cpp  application_commands.hpp  main.cpp
src/application/qt/: CMakeLists.txt
src/asset_loaders/: CMakeLists.txt  asset_loader.hpp  fbx.cpp  fbx.hpp  jpg.cpp  jpg.hpp  mat.cpp  mat.hpp  png.cpp  png.hpp  shader.cpp  shader.hpp
src/asset_management/: asset.hpp  asset_cache.cpp  asset_cache.hpp  asset_importer.cpp  asset_importer.hpp  asset_importer_context.hpp  asset_manager.cpp  asset_manager.hpp  assets_fwd.hpp  type_importer.hpp
src/asset_management/importers/: CMakeLists.txt  font_importer.cpp  font_importer.hpp  material_importer.cpp  material_importer.hpp  model_importer.cpp  model_importer.hpp  script_importer.cpp  script_importer.hpp  shader_importer.cpp  shader_importer.hpp  shader_script_importer.cpp  texture_importer.cpp  texture_importer.hpp
src/assets/: CMakeLists.txt  asset.cpp  asset.hpp  asset_cache.cpp  asset_cache.hpp  asset_importer.cpp  asset_importer.hpp  asset_manager.cpp  asset_manager.hpp  mesh_asset.cpp  mesh_asset.hpp  type_importer.hpp
src/common/: CMakeLists.txt  common_fwd.hpp  directory.cpp  directory.hpp  file.cpp  file.hpp  file_lock.hpp  file_watcher.cpp  file_watcher.hpp  filesystem.cpp  filesystem.hpp  logging.hpp  main_thread_dispatcher.cpp  main_thread_dispatcher.hpp  stdafx.hpp  utils.hpp
src/components/: box_collider_component.cpp  box_collider_component.hpp  camera_component.cpp  camera_component.hpp  collider_component.hpp  fps_show_component.cpp  fps_show_component.hpp  jumpy_component.cpp  jumpy_component.hpp  light_component.cpp  light_component.hpp  mesh_component.cpp  mesh_component.hpp  mesh_renderer_component.cpp  mesh_renderer_component.hpp  plane_collider_component.cpp  plane_collider_component.hpp  ray_visualize_component.cpp  ray_visualize_component.hpp  renderer_component.hpp  sphere_collider_component.cpp  sphere_collider_component.hpp  text_component.cpp  text_component.hpp  text_renderer_component.cpp  text_renderer_component.hpp  transform_component.cpp  transform_component.hpp  walking_component.cpp  walking_component.hpp
src/console/: CMakeLists.txt  console.cpp
src/core/: CMakeLists.txt  asset_manager.cpp  asset_manager.hpp  command.hpp  command_dispatcher.cpp  command_dispatcher.hpp  core_fwd.hpp  game_clock.cpp  game_clock.hpp  input_system.cpp  input_system.hpp  library.hpp  settings.cpp  settings.hpp  timer.cpp  timer.hpp  viewport.cpp  viewport.hpp  window.cpp  window.hpp  window_events.cpp  window_events.hpp
src/experimental/: editor_window.cpp  editor_window.hpp  input_system.cpp  input_system.hpp  viewport.cpp  viewport.hpp  window.cpp  window.hpp  window_events.cpp  window_events.hpp  window_manager.cpp  window_manager.hpp
src/glad/: CMakeLists.txt
src/graphics/: CMakeLists.txt  command.hpp  command_buffer.cpp  command_buffer.hpp  command_executors.cpp  command_executors.hpp  font.cpp  font.hpp  framebuffer.cpp  framebuffer.hpp  gizmo_drawer.cpp  gizmo_drawer.hpp  gl_error_handler.cpp  gl_error_handler.hpp  gpu.cpp  gpu.hpp  graphics.cpp  graphics.hpp  graphics_buffer.cpp  graphics_buffer.hpp  graphics_channel.cpp  graphics_channel.hpp  graphics_fwd.hpp  image.cpp  image.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  shader_property.hpp  shader_script.cpp  shader_script.hpp  texture.cpp  texture.hpp  uniform_info.hpp  utils.hpp  vaomap.cpp  vaomap.hpp  (+1 more)
src/project/: CMakeLists.txt  TODO.md  application_context.cpp  application_context.hpp  component.cpp  component.hpp  definitions.hpp  game_object.cpp  game_object.hpp  memory_manager.cpp  memory_manager.hpp  object.cpp  object.hpp  project_commands.cpp  project_commands.hpp  project_fwd.hpp  project_manager.cpp  project_manager.hpp  scene.cpp  scene.hpp  serialization_utilities.hpp  serializer.hpp  serializer_json.hpp  uid.hpp
src/renderer/: CMakeLists.txt  material_preview_renderer.cpp  material_preview_renderer.hpp  renderer.cpp  renderer.hpp  renderer_2d.cpp  renderer_2d.hpp  renderer_3d.cpp  renderer_3d.hpp
src/samples/: CMakeLists.txt  console.cpp  multiple_viewports.cpp  project.cpp  scene_load.cpp  sol2.cpp  viewport.cpp  window.cpp
src/scripting/: CMakeLists.txt  backend.cpp  backend.hpp  script.cpp  script.hpp  scripting_fwd.hpp
src/tools/: CMakeLists.txt
unittest/: CMakeLists.txt  sample.cpp
unittest/assets_ut/: CMakeLists.txt  asset_manager_ut.cpp
unittest/common_ut/: CMakeLists.txt  directory_ut.cpp  file_ut.cpp
unittest/console/: CMakeLists.txt  console_ut.cpp
unittest/console_ut/: CMakeLists.txt  console_ut.cpp
unittest/core_ut/: CMakeLists.txt  timer_ut.cpp
unittest/project/: CMakeLists.txt  component_management.cpp  game_object.cpp
unittest/project_ut/: CMakeLists.txt  component_management.cpp  game_object.cpp
(+191 files in other folders)
